--- a/index.htm
+++ b/index.htm
@@ -55,7 +55,8 @@ div.WordSection1
 <a
 href="http://mp.weixin.qq.com/s?__biz=MzU4MzgxODg2Mw==&amp;mid=100001339&amp;idx=1&amp;sn=1d6f5392aacb885daa03d34435322277&amp;chksm=7da20d3b4ad5842d53623519c1d1e90e6b882abcf5689c03f20d03135a8f1001e07c11394b12#rd"><span
 style='color:windowtext;text-decoration:none'><img border=0 width=558
-height=303 id="Í¼Æ¬ 6" src="index.files/image001.png"></span></a></span></p>
+height=303 id="Í¼Æ¬ 6" src="index.files/L-Corner/默认文件1599325663911.png
+"></span></a></span></p>
 
 <p align=center style='margin:0cm;text-align:center'><span lang=EN-US>&nbsp;</span></p>
 
