--- a/index.htm
+++ b/index.htm
@@ -1,5 +1,14 @@
-<html>
-	
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
+    <script src="index.js"></script>
+    <link rel="stylesheet"href="main.css">
+    <title>Langmonde 全网最有趣的口语学习平台</title>
+<body/>
+<body>
+<html>	
 <head>
 <meta http-equiv=Content-Type content="text/html; charset=gb2312">
 <meta name=Generator content="Microsoft Word 15 (filtered)">
