--- a/index.htm
+++ b/index.htm
@@ -7,8 +7,9 @@
     <link rel="stylesheet"href="main.css">
     <title>Langmonde 全网最有趣的口语学习平台</title>
 <body/>
-<body>
-<html>	
+
+<html>
+
 <head>
 <meta http-equiv=Content-Type content="text/html; charset=gb2312">
 <meta name=Generator content="Microsoft Word 15 (filtered)">
@@ -16,36 +17,41 @@
 <!--
  /* Font Definitions */
  @font-face
-	{font-family:ËÎÌå;
+	{font-family:宋体;
 	panose-1:2 1 6 0 3 1 1 1 1 1;}
 @font-face
 	{font-family:"Cambria Math";
 	panose-1:2 4 5 3 5 4 6 3 2 4;}
 @font-face
-	{font-family:µÈÏß;
+	{font-family:等线;
 	panose-1:2 1 6 0 3 1 1 1 1 1;}
 @font-face
-	{font-family:"\@ËÎÌå";
+	{font-family:"\@宋体";
 	panose-1:2 1 6 0 3 1 1 1 1 1;}
 @font-face
-	{font-family:"\@µÈÏß";
+	{font-family:"\@等线";
 	panose-1:2 1 6 0 3 1 1 1 1 1;}
+@font-face
+	{font-family:"Adobe 仿宋 Std R";
+	panose-1:2 2 4 0 0 0 0 0 0 0;}
+@font-face
+	{font-family:"\@Adobe 仿宋 Std R";}
  /* Style Definitions */
  p.MsoNormal, li.MsoNormal, div.MsoNormal
 	{margin:0cm;
 	text-align:justify;
 	text-justify:inter-ideograph;
 	font-size:10.5pt;
-	font-family:µÈÏß;}
+	font-family:等线;}
 p
 	{margin-right:0cm;
 	margin-left:0cm;
 	font-size:12.0pt;
-	font-family:ËÎÌå;}
+	font-family:宋体;}
 .MsoChpDefault
-	{font-family:µÈÏß;}
- /* Page Definitions */
- @page WordSection1
+	{font-size:10.0pt;
+	font-family:等线;}
+@page WordSection1
 	{size:595.3pt 841.9pt;
 	margin:72.0pt 90.0pt 72.0pt 90.0pt;
 	layout-grid:15.6pt;}
@@ -56,25 +62,29 @@ div.WordSection1
 
 </head>
 
-<body lang=ZH-CN style='text-justify-trim:punctuation'>
+<body bgcolor="#F4B083" lang=ZH-CN link=blue vlink=purple style='text-justify-trim:
+punctuation'>
 
 <div class=WordSection1 style='layout-grid:15.6pt'>
 
-<p align=center style='margin:0cm;text-align:center'><span lang=EN-US><br>
-<a
+<p align=center style='margin:0cm;text-align:center'><b><span lang=EN-US
+style='font-family:"Adobe 仿宋 Std R",serif;color:white'>Langmonde|</span></b><b><span
+style='font-family:"Adobe 仿宋 Std R",serif;color:white'>汉语角</span></b></p>
+
+<p style='margin:0cm'><b><span lang=EN-US style='font-family:"Adobe 仿宋 Std R",serif;
+color:white'>&nbsp;</span></b></p>
+
+<p align=center style='margin:0cm;text-align:center'><span lang=EN-US><a
 href="http://mp.weixin.qq.com/s?__biz=MzU4MzgxODg2Mw==&amp;mid=100001339&amp;idx=1&amp;sn=1d6f5392aacb885daa03d34435322277&amp;chksm=7da20d3b4ad5842d53623519c1d1e90e6b882abcf5689c03f20d03135a8f1001e07c11394b12#rd"><span
 style='color:windowtext;text-decoration:none'><img border=0 width=368
-height=200 id="Í¼Æ¬ 6" src="index.files/image001.png"></span></a></span></p>
+height=200 src="index.files/image001.png"></span></a></span></p>
 
 <p align=center style='margin:0cm;text-align:center'><span lang=EN-US>&nbsp;</span></p>
 
-<p align=center style='margin:0cm;text-align:center'><span lang=EN-US>&nbsp;</span></p>
-
-<p align=center style='margin:0cm;text-align:center;caret-color: rgb(0, 0, 0);
-max-width:100%;overflow-wrap: break-word !important;box-sizing: border-box !important;
-min-height: 1em'><span lang=EN-US><a href="http://langmonde.mikecrm.com/odkVsgL"><span
-style='color:windowtext;text-decoration:none'><img border=0 width=368
-height=200 id="Í¼Æ¬ 5" src="index.files/image002.png"></span></a></span></p>
+<p align=center style='margin:0cm;text-align:center'><span lang=EN-US><a
+href="http://langmonde.mikecrm.com/odkVsgL"><span style='color:windowtext;
+text-decoration:none'><img border=0 width=369 height=200
+src="index.files/image002.png"></span></a></span></p>
 
 <p class=MsoNormal style='caret-color: rgb(0, 0, 0);max-width:100%;overflow-wrap: break-word !important;
 box-sizing: border-box !important;min-height: 1em'><span lang=EN-US>&nbsp;</span></p>
