--- a/index.htm
+++ b/index.htm
@@ -8,6 +8,7 @@
     <title>Langmonde 全网最有趣的口语学习平台</title>
 <body/>
 
+
 <html>
 
 <head>
@@ -36,6 +37,11 @@
 	panose-1:2 2 4 0 0 0 0 0 0 0;}
 @font-face
 	{font-family:"\@Adobe 仿宋 Std R";}
+@font-face
+	{font-family:"Adobe Gothic Std B";
+	panose-1:2 11 8 0 0 0 0 0 0 0;}
+@font-face
+	{font-family:"\@Adobe Gothic Std B";}
  /* Style Definitions */
  p.MsoNormal, li.MsoNormal, div.MsoNormal
 	{margin:0cm;
@@ -49,8 +55,7 @@ p
 	font-size:12.0pt;
 	font-family:宋体;}
 .MsoChpDefault
-	{font-size:10.0pt;
-	font-family:等线;}
+	{font-size:10.0pt;}
 @page WordSection1
 	{size:595.3pt 841.9pt;
 	margin:72.0pt 90.0pt 72.0pt 90.0pt;
@@ -62,24 +67,28 @@ div.WordSection1
 
 </head>
 
-<body bgcolor="#F4B083" lang=ZH-CN link=blue vlink=purple style='text-justify-trim:
-punctuation'>
+<body bgcolor=white background="index.files/image001.jpg" lang=ZH-CN link=blue
+vlink=purple style='text-justify-trim:punctuation'>
 
 <div class=WordSection1 style='layout-grid:15.6pt'>
 
 <p align=center style='margin:0cm;text-align:center'><b><span lang=EN-US
-style='font-family:"Adobe 仿宋 Std R",serif;color:white'>Langmonde|</span></b><b><span
-style='font-family:"Adobe 仿宋 Std R",serif;color:white'>汉语角</span></b></p>
+style='font-family:"Adobe Gothic Std B",sans-serif;color:white'>Langmonde|</span><span
+style='color:white'>汉语</span></b><b><span style='font-family:"Adobe Gothic Std B",sans-serif;
+color:white'>角</span></b></p>
 
 <p style='margin:0cm'><b><span lang=EN-US style='font-family:"Adobe 仿宋 Std R",serif;
 color:white'>&nbsp;</span></b></p>
 
-<p align=center style='margin:0cm;text-align:center'><span lang=EN-US><a
-href="http://mp.weixin.qq.com/s?__biz=MzU4MzgxODg2Mw==&amp;mid=100001339&amp;idx=1&amp;sn=1d6f5392aacb885daa03d34435322277&amp;chksm=7da20d3b4ad5842d53623519c1d1e90e6b882abcf5689c03f20d03135a8f1001e07c11394b12#rd"><span
-style='color:windowtext;text-decoration:none'><img border=0 width=368
-height=200 src="index.files/image001.png"></span></a></span></p>
+<p style='margin:0cm'><b><span lang=EN-US style='font-family:"Adobe 仿宋 Std R",serif;
+color:white'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span></b></p>
 
-<p align=center style='margin:0cm;text-align:center'><span lang=EN-US>&nbsp;</span></p>
+<p align=center style='margin:0cm;text-align:center'><span lang=EN-US><a
+href="http://langmonde.mikecrm.com/M6YLLwD"><span style='color:windowtext;
+text-decoration:none'><img border=0 width=368 height=200
+src="index.files/image001.png"></span></a></span></p>
+
+<p style='margin:0cm'><span lang=EN-US>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span></p>
 
 <p align=center style='margin:0cm;text-align:center'><span lang=EN-US><a
 href="http://langmonde.mikecrm.com/odkVsgL"><span style='color:windowtext;
@@ -88,6 +97,32 @@ src="index.files/image002.png"></span></a></span></p>
 
 <p class=MsoNormal style='caret-color: rgb(0, 0, 0);max-width:100%;overflow-wrap: break-word !important;
 box-sizing: border-box !important;min-height: 1em'><span lang=EN-US>&nbsp;</span></p>
+
+<p class=MsoNormal><span lang=EN-US>&nbsp;</span></p>
+
+<p class=MsoNormal><span lang=EN-US>&nbsp;</span></p>
+
+<p class=MsoNormal><span lang=EN-US>&nbsp;</span></p>
+
+<p class=MsoNormal><span lang=EN-US>&nbsp;</span></p>
+
+<p class=MsoNormal><span lang=EN-US>&nbsp;</span></p>
+
+<p class=MsoNormal><span lang=EN-US>&nbsp;</span></p>
+
+<p class=MsoNormal><span lang=EN-US>&nbsp;</span></p>
+
+<p class=MsoNormal><span lang=EN-US>&nbsp;</span></p>
+
+<p class=MsoNormal><span lang=EN-US>&nbsp;</span></p>
+
+<p class=MsoNormal><span lang=EN-US>&nbsp;</span></p>
+
+<p class=MsoNormal><span lang=EN-US>&nbsp;</span></p>
+
+<p class=MsoNormal align=center style='text-align:center'><b><span lang=EN-US
+style='font-size:3.0pt;color:white'>Copyright&copy;2019-2020 Langmonde All Rights
+Reserved.</span></b></p>
 
 </div>
 
