--- a/index.htm
+++ b/index.htm
@@ -94,7 +94,7 @@ src="index.files/image001.png"></span></a></span></p>
 <p style='margin:0cm'><span lang=EN-US>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span></p>
 
 <p align=center style='margin:0cm;text-align:center'><span lang=EN-US><a
-href="http://langmonde.mikecrm.com/roy9yrw'color:windowtext;
+href="http://langmonde.mikecrm.com/roy9yrw"><span style=color:windowtext;
 text-decoration:none'><img border=0 width=369 height=200
 src="index.files/image002.png"></span></a></span></p>
 
